MilestoneRFAFullSandBox/src/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>CM_Only_in_the_case_of_Rebate__c</fullName>
        <description>CMで使用</description>
        <label>07. Only in the case of Rebate</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 40,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 30,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 30,000,000 yen and ≦ 40,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 15,000,000 yen and ≦ 30,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen and ≦ 30,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 5,000,000 yen and ≦ 15,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 5,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 1,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 1,000,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Other_support_FA_ACR__c</fullName>
        <description>08. その他協賛/最終承認者COA略称</description>
        <label>08. Final Approver Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Other_support_FA_Name__c</fullName>
        <description>08. その他協賛/最終承認ユーザ名</description>
        <label>08. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Other_support_FA__c</fullName>
        <description>8.その他協賛 最終承認者</description>
        <formula>CM_Other_support_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Other_support_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>08. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Other_support__c</fullName>
        <description>CMで使用</description>
        <label>08. Other support</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen and ≦ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 1,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 100,000 yen and ≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 100,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_PrimaryCOACategory__c</fullName>
        <label>CMPrimary COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Price promotion for Marketing &amp; Commercial leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Credit Terms / Policies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_PrimaryCOASubCategory2__c</fullName>
        <label>CMPrimary COA Sub Category 2</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Decision/change and master registration of standard wholesale price of KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Decision/change and master registration of standard wholesale price of non-KO products and secondary products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Decision/change of the whole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Additional decision of the new price range and partial change of the guideline table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Price promotion (wholesale price)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Selling price promotion (full service VM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Non-price promotion (National)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Non-price promotion (Local)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Media expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. New product sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. POS material,Event, incentive, sponsor connection, other sales promotion-related expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Flush out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Amount of Credit limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Credit limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Credit period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_PrimaryCOASubCategory3__c</fullName>
        <label>CMPrimary COA Sub Category 3</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>1. Decision in the new price range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Decision in the same price range as the existing price range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Price Guideline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. FS Sales Commission Guideline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Total amount per transaction ＞ 100,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Total amount per transaction ＞ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. ＞ 50,000,000 yen and ≦ 100,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. ＞ 25,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. ＞ 20,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. ＞ 5,000,000 yen and ≦ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. ≦ 20,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. ≦ 5,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create less risk to the company (shortening credit terms) &gt; 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create more risk to the company (lengthening credit terms) &gt; 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Terms &gt; 1 month and &lt; 2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Terms ≧ 2 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_PrimaryCOASubCategory__c</fullName>
        <label>CMPrimary COA Sub Category 1</label>
        <picklist>
            <controllingField>CM_PrimaryCOACategory__c</controllingField>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Decision/change of standard wholesale price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Decision/change of VM standard wholesale price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Decision/change of the price guideline table and the FS sales price/commission guideline table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of Field Sales Operation and VM Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales&amp;Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - OCS, Shop Caffe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Price promotion for Marketing &amp; Commercial leadership　1. Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Price promotion for Marketing &amp; Commercial leadership　2. Sales promotion expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Flush out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Credit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z. Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_CooperationSampling_FA_ACR__c</fullName>
        <description>10. プロモーション（サンプル協賛/サンプリング）/最終承認者COA略称</description>
        <label>10. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_CooperationSampling_FA_Name__c</fullName>
        <description>10. プロモーション（サンプル協賛/サンプリング）/最終承認ユーザ名</description>
        <label>10. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_CooperationSampling_FA__c</fullName>
        <description>10.プロモーション（サンプル協賛/サンプリング） 最終承認者</description>
        <formula>CM_Promotion_CooperationSampling_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Promotion_CooperationSampling_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>10. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_CooperationSampling__c</fullName>
        <label>10. Promotion (Cooperation / Sampling)</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Per deal ＞ 50 cases or ＞ 100,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per deal ＞ 10 cases and ≦ 50 cases, ＞ 20,000 yen and ≦ 100,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per deal ＞ 10 cases and ＞ 20,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per deal ≦ 50 cases and ≦ 100,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per deal ≦ 10 cases and ≦ 20,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_OtherExpense_FA_ACR__c</fullName>
        <description>09. プロモーション/その他費用/最終承認者COA略称</description>
        <label>09. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_OtherExpense_FA_Name__c</fullName>
        <description>09. プロモーション/その他費用/最終承認ユーザ名</description>
        <label>09. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_OtherExpense_FA__c</fullName>
        <description>9.プロモーション/その他費用 最終承認者</description>
        <formula>CM_Promotion_OtherExpense_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Promotion_OtherExpense_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>09. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_OtherExpense__c</fullName>
        <description>CMで使用</description>
        <label>09. Promotion / Other expense</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 7,500,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 5,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 5,000,000 yen and ≦ 7,500,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 1,000,000 yen and ≦ 5,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 250,000 yen and ≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 250,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 100,000 yen and ≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 100,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_CVS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Chanel</description>
        <label>CVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_FS_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Chanel
CM使用</description>
        <label>FS-Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_FS_RTD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Chanel
CM使用</description>
        <label>FS-RTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_OTC_RS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales chanel
CM使用</description>
        <label>OTC-RS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_OTC_SY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Chanel
CM使用</description>
        <label>OTC-SY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales chanel
CM使用</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesChanel_SM_DD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Chanel
CM使用</description>
        <label>SM・DD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_SalesValue_BAPC_After__c</fullName>
        <inlineHelpText>ケースで入力します</inlineHelpText>
        <label>Sales volume/BAPC(after)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_SalesValue_BAPC_Before__c</fullName>
        <inlineHelpText>ケースで入力します</inlineHelpText>
        <label>Sales volume/BAPC(before)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_SalesValue_BAPC_Difference__c</fullName>
        <formula>IF(isNull(CM_SalesValue_BAPC_Before__c), null , CM_SalesValue_BAPC_After__c - CM_SalesValue_BAPC_Before__c)</formula>
        <label>Sales volume/BAPC(difference)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispenser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_SpecialPricePromotionDiscount_FA_ACR__c</fullName>
        <description>02. 特売/プロモーション値引き/最終承認者COA略称</description>
        <label>02. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SpecialPricePromotionDiscount_FA_Name__c</fullName>
        <description>02. 特売/プロモーション値引き/最終承認ユーザ名</description>
        <label>02. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SpecialPricePromotionDiscount__c</fullName>
        <label>02. Special price / Promotion discount</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Category A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard wholesale price, and set above the standard wholesale price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside of the object of approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealings by OCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The deletion request of registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_SpecialSalesPromotionDiscount_FA__c</fullName>
        <description>2.特売/プロモーション値引き 最終承認者</description>
        <formula>CM_SpecialPricePromotionDiscount_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_SpecialPricePromotionDiscount_FA_Name__c</formula>
        <label>02. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Summary_Purpose_rationnale_background__c</fullName>
        <description>Summary / Purpose / rationale / background</description>
        <label>Input</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_Lease_FA_ACR__c</fullName>
        <description>d. 販売機材のリース取引/最終承認者COA略称</description>
        <label>d. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_Lease_FA_Name__c</fullName>
        <description>d. 販売機材のリース取引/最終承認ユーザ名</description>
        <label>d. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_Lease_FA__c</fullName>
        <description>d.販売機材のリース取引 最終承認者</description>
        <formula>CM_Vending_Equipment_Lease_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Vending_Equipment_Lease_FA_Name__c</formula>
        <label>d. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_Lease__c</fullName>
        <label>d. Vending Equipment Lease</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Application for Vending Equipment Leases</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_parts_FA_ACR__c</fullName>
        <description>b. 機材部品申請/最終承認者COA略称</description>
        <label>b. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_parts_FA_Name__c</fullName>
        <description>b. 機材部品申請/最終承認ユーザ名</description>
        <label>b. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_parts_FA__c</fullName>
        <description>b.機材部品申請 最終承認者</description>
        <formula>CM_Vending_Equipment_parts_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Vending_Equipment_parts_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>b. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Vending_Equipment_parts__c</fullName>
        <label>b. Vending Equipment parts</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 100,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ≦ 100,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CapitalExpenditureTotalFC__c</fullName>
        <label>Capital Expenditure Total (JPY)</label>
        <summarizedField>Capital_Expenditure__c.Amount__c</summarizedField>
        <summaryForeignKey>Capital_Expenditure__c.RFA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CapitalManagementAdministered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A field to be selected by Capital Management for time sensitive RFAs which must be expedited through the approval process.  Therefore, these RFAs will not be included in RFA system metrics reporting.</inlineHelpText>
        <label>Capital Management Administered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CapitalizedInterestUSD__c</fullName>
        <inlineHelpText>Charged on projects which are greater than U.S. $500,000 and involve a preparation period of more than 3 months (see Standard Practices and Procedures manual, Bulletin 8.1).</inlineHelpText>
        <label>Capitalized Interest (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashflowAnalysisYears__c</fullName>
        <inlineHelpText>何年間の収支分析かを示します。</inlineHelpText>
        <label>Cashflow Analysis Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashflowYears__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Cashflow Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caution__c</fullName>
        <defaultValue>&quot;承認プロセスに日本人以外が含まれる場合は、日本語と英語の両方で記述をお願いします。&quot;+BR()+
&quot;なお、添付ファイルではなく、本文の入力箇所に必ず記入してください。&quot;

+BR()+

&quot;Both Japanese and English comments are required, if non-Japanese recipients are involved in the approval process.&quot;</defaultValue>
        <label>Caution</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CirculationDate__c</fullName>
        <inlineHelpText>承認申請がドラフトから回覧中に更新された日時。</inlineHelpText>
        <label>Circulation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Close Reason by Requester, only available on Draft or Return To Sender</description>
        <label>Close Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsConditions__c</fullName>
        <inlineHelpText>承認者が承認条件を記述します。</inlineHelpText>
        <label>Comments/Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>資本管理者がこの申請に関してコメントする欄です。作成者や承認者は閲覧することができません。</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsaboutExpectedCommitmentDate__c</fullName>
        <inlineHelpText>契約予定日について説明します。例えば、罰則なしで契約できる最後の日あるいは、契約締結が求められる日など。</inlineHelpText>
        <label>Comments about Expected Commitment Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyDiscountPaybackPeriodYears__c</fullName>
        <inlineHelpText>The number of years it takes to break-even between the investment and the return using a the Company&apos;s WACC rate.</inlineHelpText>
        <label>Company Discount Payback Period (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyIRR__c</fullName>
        <inlineHelpText>投資の収益率を分析する時に計算される内部収益率。</inlineHelpText>
        <label>Company IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyInvestmentAmortizationYears__c</fullName>
        <label>Company Investment Amortization Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyLocalEffectiveTaxRate__c</fullName>
        <inlineHelpText>財務分析に使用されます。資本管理によって提供される実効税率です。</inlineHelpText>
        <label>Company Local Effective Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyParticipationAmountFC__c</fullName>
        <inlineHelpText>The Company&apos;s portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipationAmountUSD__c</fullName>
        <formula>CompanyParticipationAmountFC__c 
/*
CompanyParticipationAmountFC__c * ARERate__c
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Company&apos;s portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation Amount (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipation__c</fullName>
        <inlineHelpText>The Company&apos;s percentage portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyWACC__c</fullName>
        <inlineHelpText>Weighted average cost of capital provided by Treasury to be used in the financial analysis.</inlineHelpText>
        <label>Company WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Entertainment</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <inlineHelpText>申請が承認、否認、クローズされた日時。</inlineHelpText>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CostCenterName__c</fullName>
        <formula>Cost_Center_Number__r.Function__c &amp; &quot; / &quot; &amp; Cost_Center_Number__r.Cost_Center_Name__c  
+BR()+
Cost_Center_Number__r.Function_En__c &amp; &quot; / &quot; &amp; Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <label>Cost Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Function_Name_EN__c</fullName>
        <formula>Cost_Center_Number__r.Function_En__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Function/Name EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Function_Name_JP__c</fullName>
        <formula>Cost_Center_Number__r.Function__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Function/Name JP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Function__c</fullName>
        <formula>Cost_Center_Number__r.Function_En__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Number_Name__c</fullName>
        <formula>Cost_Center_Number__r.Name &amp;&quot;　 &quot;&amp; 
Cost_Center_Number__r.Function__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name__c &amp;&quot;　 &quot;&amp;
 Cost_Center_Number__r.Function_En__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <label>Cost Center Number/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Center No.</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Standard_Name__c</fullName>
        <formula>Cost_Center_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Standard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Estimates__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>